Add practical PDF download and preview section
Added a section for practical PDF downloads with preview functionality.

--- a/index.html
+++ b/index.html
@@ -1290,7 +1290,15 @@
     </a>
     <button class="pdfEce-btn" onclick="openEcePdfPreview('${subjectCode}-cait1.pdf')">Preview PDF</button>
   </div>
-
+  
+<!-- practical  -->
+  <div class="app-guide-container">
+    <h4 style="text-align:center;">practical</h4>
+    <a href="${subjectCode}-practical.pdf" download="${subjectCode}-practical.pdf" class="app-guide-download-btn">
+      <span class="app-guide-icon">📥</span>${subjectCode}-practical.pdf
+    </a>
+    <button class="pdfEce-btn" onclick="openEcePdfPreview('${subjectCode}-practical.pdf')">Preview PDF</button>
+  </div>
   <!-- CAIT 2 -->
   <div class="app-guide-container">
     <h4 style="text-align:center;">CAIT-2</h4>
