Update PDF download links to include 'myfolder'

--- a/index.html
+++ b/index.html
@@ -1285,7 +1285,7 @@
   <!-- CAIT 1 -->
   <div class="app-guide-container">
     <h4 style="text-align:center;">CAIT-1</h4>
-    <a href="${subjectCode}-cait1.pdf" download="${subjectCode}-cait1.pdf" class="app-guide-download-btn">
+    <a href="myfolder/myfolder/${subjectCode}-cait1.pdf" download="${subjectCode}-cait1.pdf" class="app-guide-download-btn">
       <span class="app-guide-icon">📥</span> ${subjectCode}-cait1.pdf
     </a>
     <button class="pdfEce-btn" onclick="openEcePdfPreview('${subjectCode}-cait1.pdf')">Preview PDF</button>
@@ -1294,7 +1294,7 @@
 <!-- practical  -->
   <div class="app-guide-container">
     <h4 style="text-align:center;">practical</h4>
-    <a href="${subjectCode}-practical.pdf" download="${subjectCode}-practical.pdf" class="app-guide-download-btn">
+    <a href="myfolder/myfolder/${subjectCode}-practical.pdf" download="${subjectCode}-practical.pdf" class="app-guide-download-btn">
       <span class="app-guide-icon">📥</span>${subjectCode}-practical.pdf
     </a>
     <button class="pdfEce-btn" onclick="openEcePdfPreview('${subjectCode}-practical.pdf')">Preview PDF</button>
@@ -1302,7 +1302,7 @@
   <!-- CAIT 2 -->
   <div class="app-guide-container">
     <h4 style="text-align:center;">CAIT-2</h4>
-    <a href="${subjectCode}-cait2.pdf" download="${subjectCode}-cait2.pdf" class="app-guide-download-btn">
+    <a href="myfolder/myfolder/${subjectCode}-cait2.pdf" download="${subjectCode}-cait2.pdf" class="app-guide-download-btn">
       <span class="app-guide-icon">📥</span> ${subjectCode}-cait2.pdf
     </a>
     <button class="pdfEce-btn" onclick="openEcePdfPreview('ece.pdf')">Preview PDF</button>
@@ -1311,7 +1311,7 @@
   <!-- MODEL EXAM -->
   <div class="app-guide-container">
     <h4 style="text-align:center;">MODEL EXAM</h4>
-    <a href="${subjectCode}-model-exam.pdf" download="${subjectCode}-model-exam.pdf" class="app-guide-download-btn">
+    <a href="myfolder/myfolder/${subjectCode}-model-exam.pdf" download="${subjectCode}-model-exam.pdf" class="app-guide-download-btn">
       <span class="app-guide-icon">📥</span>${subjectCode}-model-exam.pdf
     </a>
     <button class="pdfEce-btn" onclick="openEcePdfPreview('${subjectCode}-model-exam.pdf')">Preview PDF</button>
