--- a/index.html
+++ b/index.html
@@ -1237,28 +1237,34 @@
     }
 
     // Show practical images in modal
-    function showPdfPopup(subjectCode) {
+    
+// Show PDF popup with working download and preview links
+function showPdfPopup(subjectCode) {
   const pdfTypes = ["cait1", "practical", "cait2", "model-exam"];
 
+  // Create overlay
   const overlay = document.createElement("div");
   overlay.className = "overlay";
   overlay.id = "pdfOverlay";
 
+  // Create popup container
   const popup = document.createElement("div");
   popup.className = "popup-container";
 
+  // Close button
   const closeBtn = document.createElement("button");
   closeBtn.className = "close-btn";
   closeBtn.textContent = "×";
   closeBtn.onclick = hidePdfPopup;
 
+  // Scrollable content
   const content = document.createElement("div");
   content.className = "content-scroll";
 
-  // Create sections dynamically
+  // Use single folder path (fixed)
   content.innerHTML = pdfTypes
     .map(type => {
-      const pdfPath = `myfolder/myfolder/${subjectCode}-${type}.pdf`;
+      const pdfPath = `myfolder/${subjectCode}-${type}.pdf`;
       return `
         <div class="app-guide-container">
           <h4 style="text-align:center;">${type.replace("-", " ").toUpperCase()}</h4>
@@ -1273,6 +1279,7 @@
     })
     .join("");
 
+  // Append elements
   popup.appendChild(closeBtn);
   popup.appendChild(content);
   overlay.appendChild(popup);
@@ -1280,7 +1287,6 @@
 
   overlay.style.display = "flex";
 }
-
     // Hide PDF popup
     function hidePdfPopup() {
       const overlay = document.getElementById('pdfOverlay');
