--- a/index.html
+++ b/index.html
@@ -1117,7 +1117,7 @@
           openChapterSidebar(subjectCode, chapterIndex);
         });
       });
-
+const pdfPath = `myfolder/myfolder/${subjectCode}-${type}.pdf`;
       // Add event listeners for "Show Pictures" buttons
       const showBtns = semesterContent.querySelectorAll('.show-btn');
       showBtns.forEach(btn => {
