--- a/index.html
+++ b/index.html
@@ -1117,7 +1117,7 @@
           openChapterSidebar(subjectCode, chapterIndex);
         });
       });
-const pdfPath = `myfolder/myfolder/${subjectCode}-${type}.pdf`;
+
       // Add event listeners for "Show Pictures" buttons
       const showBtns = semesterContent.querySelectorAll('.show-btn');
       showBtns.forEach(btn => {
@@ -1264,7 +1264,7 @@ function showPdfPopup(subjectCode) {
   // Use single folder path (fixed)
   content.innerHTML = pdfTypes
     .map(type => {
-      const pdfPath = ``myfolder/myfolder/${subjectCode}-${type}.pdf`;
+      const pdfPath = `myfolder/${subjectCode}-${type}.pdf`;
       return `
         <div class="app-guide-container">
           <h4 style="text-align:center;">${type.replace("-", " ").toUpperCase()}</h4>
