Add 'resources' to pdfTypes array in showPdfPopup

--- a/index.html
+++ b/index.html
@@ -1240,7 +1240,7 @@
     
 // Show PDF popup with working download and preview links
 function showPdfPopup(subjectCode) {
-  const pdfTypes = ["cait1", "practical", "cait2", "model-exam"];
+  const pdfTypes = ["cait1","resources", "practical", "cait2", "model-exam"];
 
   // Create overlay
   const overlay = document.createElement("div");
